--- a/train.ipynb
+++ b/train.ipynb
@@ -17,147 +17,15 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "# 确保当前工作目录是项目根目录\n",
-    "os.chdir('Chinese-Text-Classification-Pytorch')"
+    "# # 确保当前工作目录是项目根目录\n",
+    "# os.chdir('Chinese-Text-Classification-Pytorch')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading data...\n",
-      "Vocab size: 4762\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "180000it [00:01, 116318.69it/s]\n",
-      "10000it [00:00, 157112.99it/s]\n",
-      "10000it [00:00, 157923.42it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vocab size: 4762\n",
-      "<bound method Module.parameters of Model(\n",
-      "  (embedding): Embedding(4762, 300)\n",
-      "  (convs): ModuleList(\n",
-      "    (0): Conv2d(1, 256, kernel_size=(2, 300), stride=(1, 1))\n",
-      "    (1): Conv2d(1, 256, kernel_size=(3, 300), stride=(1, 1))\n",
-      "    (2): Conv2d(1, 256, kernel_size=(4, 300), stride=(1, 1))\n",
-      "  )\n",
-      "  (dropout): Dropout(p=0.5, inplace=False)\n",
-      "  (fc): Linear(in_features=768, out_features=10, bias=True)\n",
-      ")>\n",
-      "Epoch [1/20]\n",
-      "Iter:      0,  Train Loss:   2.3,  Train Acc: 11.72%,  Train Recall: 12.87%,  Train F1:  8.98%,  Val Loss:   2.7,  Val Acc: 14.83%,  Val Recall: 14.83%,  Val F1:  6.15%,  Time: 0:00:01 *\n",
-      "Iter:    100,  Train Loss:  0.73,  Train Acc: 72.66%,  Train Recall: 71.34%,  Train F1: 71.78%,  Val Loss:   0.7,  Val Acc: 78.51%,  Val Recall: 78.51%,  Val F1: 78.43%,  Time: 0:00:02 *\n",
-      "Iter:    200,  Train Loss:  0.69,  Train Acc: 75.78%,  Train Recall: 76.96%,  Train F1: 76.33%,  Val Loss:  0.55,  Val Acc: 83.45%,  Val Recall: 83.45%,  Val F1: 83.52%,  Time: 0:00:03 *\n",
-      "Iter:    300,  Train Loss:  0.43,  Train Acc: 84.38%,  Train Recall: 84.37%,  Train F1: 84.10%,  Val Loss:  0.49,  Val Acc: 85.10%,  Val Recall: 85.10%,  Val F1: 85.03%,  Time: 0:00:03 *\n",
-      "Iter:    400,  Train Loss:  0.74,  Train Acc: 77.34%,  Train Recall: 79.86%,  Train F1: 78.43%,  Val Loss:  0.47,  Val Acc: 85.29%,  Val Recall: 85.29%,  Val F1: 85.28%,  Time: 0:00:04 *\n",
-      "Iter:    500,  Train Loss:  0.35,  Train Acc: 89.06%,  Train Recall: 87.07%,  Train F1: 86.79%,  Val Loss:  0.44,  Val Acc: 86.43%,  Val Recall: 86.43%,  Val F1: 86.46%,  Time: 0:00:04 *\n",
-      "Iter:    600,  Train Loss:  0.51,  Train Acc: 82.81%,  Train Recall: 82.83%,  Train F1: 81.94%,  Val Loss:  0.42,  Val Acc: 86.74%,  Val Recall: 86.74%,  Val F1: 86.74%,  Time: 0:00:05 *\n",
-      "Iter:    700,  Train Loss:  0.47,  Train Acc: 82.81%,  Train Recall: 84.19%,  Train F1: 83.09%,  Val Loss:   0.4,  Val Acc: 87.34%,  Val Recall: 87.34%,  Val F1: 87.30%,  Time: 0:00:06 *\n",
-      "Iter:    800,  Train Loss:  0.41,  Train Acc: 87.50%,  Train Recall: 85.41%,  Train F1: 85.82%,  Val Loss:   0.4,  Val Acc: 87.79%,  Val Recall: 87.79%,  Val F1: 87.77%,  Time: 0:00:06 *\n",
-      "Iter:    900,  Train Loss:  0.49,  Train Acc: 84.38%,  Train Recall: 85.36%,  Train F1: 83.51%,  Val Loss:  0.38,  Val Acc: 88.03%,  Val Recall: 88.03%,  Val F1: 88.00%,  Time: 0:00:07 *\n",
-      "Iter:   1000,  Train Loss:  0.31,  Train Acc: 89.84%,  Train Recall: 89.91%,  Train F1: 89.70%,  Val Loss:  0.38,  Val Acc: 88.06%,  Val Recall: 88.06%,  Val F1: 88.08%,  Time: 0:00:07 *\n",
-      "Iter:   1100,  Train Loss:  0.38,  Train Acc: 89.84%,  Train Recall: 91.10%,  Train F1: 90.73%,  Val Loss:  0.37,  Val Acc: 88.49%,  Val Recall: 88.49%,  Val F1: 88.47%,  Time: 0:00:08 *\n",
-      "Iter:   1200,  Train Loss:  0.35,  Train Acc: 89.06%,  Train Recall: 90.04%,  Train F1: 88.77%,  Val Loss:  0.37,  Val Acc: 89.08%,  Val Recall: 89.08%,  Val F1: 89.07%,  Time: 0:00:09 *\n",
-      "Iter:   1300,  Train Loss:  0.44,  Train Acc: 82.81%,  Train Recall: 81.86%,  Train F1: 80.89%,  Val Loss:  0.36,  Val Acc: 88.99%,  Val Recall: 88.99%,  Val F1: 88.99%,  Time: 0:00:09 *\n",
-      "Iter:   1400,  Train Loss:  0.49,  Train Acc: 83.59%,  Train Recall: 84.82%,  Train F1: 83.74%,  Val Loss:  0.36,  Val Acc: 88.85%,  Val Recall: 88.85%,  Val F1: 88.88%,  Time: 0:00:10 *\n",
-      "Epoch [2/20]\n",
-      "Iter:   1500,  Train Loss:   0.4,  Train Acc: 85.94%,  Train Recall: 86.27%,  Train F1: 86.28%,  Val Loss:  0.35,  Val Acc: 89.00%,  Val Recall: 89.00%,  Val F1: 88.99%,  Time: 0:00:10 *\n",
-      "Iter:   1600,  Train Loss:   0.3,  Train Acc: 92.19%,  Train Recall: 93.99%,  Train F1: 92.75%,  Val Loss:  0.35,  Val Acc: 89.00%,  Val Recall: 89.00%,  Val F1: 89.04%,  Time: 0:00:11 *\n",
-      "Iter:   1700,  Train Loss:  0.42,  Train Acc: 89.84%,  Train Recall: 88.96%,  Train F1: 89.38%,  Val Loss:  0.35,  Val Acc: 89.38%,  Val Recall: 89.38%,  Val F1: 89.37%,  Time: 0:00:12 *\n",
-      "Iter:   1800,  Train Loss:  0.34,  Train Acc: 90.62%,  Train Recall: 92.06%,  Train F1: 91.14%,  Val Loss:  0.36,  Val Acc: 88.94%,  Val Recall: 88.94%,  Val F1: 89.02%,  Time: 0:00:12 \n",
-      "Iter:   1900,  Train Loss:  0.36,  Train Acc: 89.06%,  Train Recall: 88.51%,  Train F1: 88.48%,  Val Loss:  0.34,  Val Acc: 89.18%,  Val Recall: 89.18%,  Val F1: 89.20%,  Time: 0:00:13 *\n",
-      "Iter:   2000,  Train Loss:  0.34,  Train Acc: 85.16%,  Train Recall: 85.39%,  Train F1: 84.66%,  Val Loss:  0.34,  Val Acc: 89.40%,  Val Recall: 89.40%,  Val F1: 89.38%,  Time: 0:00:13 *\n",
-      "Iter:   2100,  Train Loss:   0.4,  Train Acc: 85.94%,  Train Recall: 86.07%,  Train F1: 85.26%,  Val Loss:  0.34,  Val Acc: 89.43%,  Val Recall: 89.43%,  Val F1: 89.45%,  Time: 0:00:14 \n",
-      "Iter:   2200,  Train Loss:   0.3,  Train Acc: 89.06%,  Train Recall: 89.00%,  Train F1: 89.36%,  Val Loss:  0.33,  Val Acc: 89.50%,  Val Recall: 89.50%,  Val F1: 89.48%,  Time: 0:00:15 *\n",
-      "Iter:   2300,  Train Loss:  0.32,  Train Acc: 92.97%,  Train Recall: 92.78%,  Train F1: 92.46%,  Val Loss:  0.33,  Val Acc: 89.73%,  Val Recall: 89.73%,  Val F1: 89.75%,  Time: 0:00:15 *\n",
-      "Iter:   2400,  Train Loss:  0.25,  Train Acc: 92.19%,  Train Recall: 93.85%,  Train F1: 92.36%,  Val Loss:  0.34,  Val Acc: 89.69%,  Val Recall: 89.69%,  Val F1: 89.66%,  Time: 0:00:16 \n",
-      "Iter:   2500,  Train Loss:  0.19,  Train Acc: 93.75%,  Train Recall: 94.16%,  Train F1: 93.18%,  Val Loss:  0.33,  Val Acc: 89.77%,  Val Recall: 89.77%,  Val F1: 89.74%,  Time: 0:00:17 *\n",
-      "Iter:   2600,  Train Loss:  0.42,  Train Acc: 85.94%,  Train Recall: 85.73%,  Train F1: 85.27%,  Val Loss:  0.33,  Val Acc: 90.04%,  Val Recall: 90.04%,  Val F1: 90.06%,  Time: 0:00:17 *\n",
-      "Iter:   2700,  Train Loss:  0.24,  Train Acc: 91.41%,  Train Recall: 91.33%,  Train F1: 90.50%,  Val Loss:  0.33,  Val Acc: 89.67%,  Val Recall: 89.67%,  Val F1: 89.67%,  Time: 0:00:18 \n",
-      "Iter:   2800,  Train Loss:  0.37,  Train Acc: 87.50%,  Train Recall: 88.71%,  Train F1: 87.71%,  Val Loss:  0.33,  Val Acc: 89.84%,  Val Recall: 89.84%,  Val F1: 89.87%,  Time: 0:00:18 \n",
-      "Epoch [3/20]\n",
-      "Iter:   2900,  Train Loss:  0.33,  Train Acc: 89.06%,  Train Recall: 88.36%,  Train F1: 88.51%,  Val Loss:  0.33,  Val Acc: 89.90%,  Val Recall: 89.90%,  Val F1: 89.92%,  Time: 0:00:19 \n",
-      "Iter:   3000,  Train Loss:  0.23,  Train Acc: 93.75%,  Train Recall: 93.65%,  Train F1: 93.39%,  Val Loss:  0.33,  Val Acc: 89.70%,  Val Recall: 89.70%,  Val F1: 89.68%,  Time: 0:00:19 \n",
-      "Iter:   3100,  Train Loss:  0.31,  Train Acc: 91.41%,  Train Recall: 91.96%,  Train F1: 91.07%,  Val Loss:  0.33,  Val Acc: 89.77%,  Val Recall: 89.77%,  Val F1: 89.83%,  Time: 0:00:20 \n",
-      "Iter:   3200,  Train Loss:  0.36,  Train Acc: 91.41%,  Train Recall: 91.67%,  Train F1: 91.04%,  Val Loss:  0.34,  Val Acc: 89.81%,  Val Recall: 89.81%,  Val F1: 89.82%,  Time: 0:00:21 \n",
-      "Iter:   3300,  Train Loss:  0.27,  Train Acc: 91.41%,  Train Recall: 91.51%,  Train F1: 91.28%,  Val Loss:  0.32,  Val Acc: 90.06%,  Val Recall: 90.06%,  Val F1: 90.09%,  Time: 0:00:21 *\n",
-      "Iter:   3400,  Train Loss:  0.27,  Train Acc: 91.41%,  Train Recall: 92.32%,  Train F1: 91.80%,  Val Loss:  0.33,  Val Acc: 90.06%,  Val Recall: 90.06%,  Val F1: 90.06%,  Time: 0:00:22 \n",
-      "Iter:   3500,  Train Loss:  0.17,  Train Acc: 94.53%,  Train Recall: 94.21%,  Train F1: 94.22%,  Val Loss:  0.33,  Val Acc: 90.04%,  Val Recall: 90.04%,  Val F1: 90.05%,  Time: 0:00:22 \n",
-      "Iter:   3600,  Train Loss:  0.17,  Train Acc: 95.31%,  Train Recall: 95.79%,  Train F1: 95.33%,  Val Loss:  0.34,  Val Acc: 89.81%,  Val Recall: 89.81%,  Val F1: 89.85%,  Time: 0:00:23 \n",
-      "Iter:   3700,  Train Loss:  0.33,  Train Acc: 89.84%,  Train Recall: 89.05%,  Train F1: 89.31%,  Val Loss:  0.33,  Val Acc: 90.01%,  Val Recall: 90.01%,  Val F1: 90.02%,  Time: 0:00:24 \n",
-      "Iter:   3800,  Train Loss:  0.34,  Train Acc: 87.50%,  Train Recall: 88.39%,  Train F1: 87.65%,  Val Loss:  0.33,  Val Acc: 89.91%,  Val Recall: 89.91%,  Val F1: 89.91%,  Time: 0:00:24 \n",
-      "Iter:   3900,  Train Loss:  0.35,  Train Acc: 87.50%,  Train Recall: 88.43%,  Train F1: 88.00%,  Val Loss:  0.34,  Val Acc: 89.57%,  Val Recall: 89.57%,  Val F1: 89.64%,  Time: 0:00:25 \n",
-      "Iter:   4000,  Train Loss:  0.27,  Train Acc: 93.75%,  Train Recall: 93.10%,  Train F1: 93.23%,  Val Loss:  0.34,  Val Acc: 89.89%,  Val Recall: 89.89%,  Val F1: 89.97%,  Time: 0:00:25 \n",
-      "Iter:   4100,  Train Loss:  0.31,  Train Acc: 90.62%,  Train Recall: 91.36%,  Train F1: 90.16%,  Val Loss:  0.32,  Val Acc: 90.27%,  Val Recall: 90.27%,  Val F1: 90.27%,  Time: 0:00:26 *\n",
-      "Iter:   4200,  Train Loss:   0.3,  Train Acc: 89.06%,  Train Recall: 88.78%,  Train F1: 88.66%,  Val Loss:  0.33,  Val Acc: 89.93%,  Val Recall: 89.93%,  Val F1: 89.94%,  Time: 0:00:27 \n",
-      "Epoch [4/20]\n",
-      "Iter:   4300,  Train Loss:  0.25,  Train Acc: 91.41%,  Train Recall: 92.24%,  Train F1: 91.29%,  Val Loss:  0.32,  Val Acc: 90.05%,  Val Recall: 90.05%,  Val F1: 90.11%,  Time: 0:00:27 *\n",
-      "Iter:   4400,  Train Loss:  0.18,  Train Acc: 94.53%,  Train Recall: 94.35%,  Train F1: 93.81%,  Val Loss:  0.32,  Val Acc: 90.31%,  Val Recall: 90.31%,  Val F1: 90.31%,  Time: 0:00:28 *\n",
-      "Iter:   4500,  Train Loss:  0.36,  Train Acc: 89.84%,  Train Recall: 87.87%,  Train F1: 87.71%,  Val Loss:  0.32,  Val Acc: 90.17%,  Val Recall: 90.17%,  Val F1: 90.17%,  Time: 0:00:28 \n",
-      "Iter:   4600,  Train Loss:  0.29,  Train Acc: 88.28%,  Train Recall: 88.37%,  Train F1: 88.64%,  Val Loss:  0.32,  Val Acc: 90.25%,  Val Recall: 90.25%,  Val F1: 90.27%,  Time: 0:00:29 \n",
-      "Iter:   4700,  Train Loss:   0.4,  Train Acc: 88.28%,  Train Recall: 88.27%,  Train F1: 87.99%,  Val Loss:  0.32,  Val Acc: 90.27%,  Val Recall: 90.27%,  Val F1: 90.30%,  Time: 0:00:30 \n",
-      "Iter:   4800,  Train Loss:   0.2,  Train Acc: 93.75%,  Train Recall: 93.02%,  Train F1: 92.75%,  Val Loss:  0.32,  Val Acc: 90.35%,  Val Recall: 90.35%,  Val F1: 90.35%,  Time: 0:00:30 *\n",
-      "Iter:   4900,  Train Loss:  0.16,  Train Acc: 96.09%,  Train Recall: 95.57%,  Train F1: 95.93%,  Val Loss:  0.32,  Val Acc: 90.71%,  Val Recall: 90.71%,  Val F1: 90.71%,  Time: 0:00:31 \n",
-      "Iter:   5000,  Train Loss:  0.27,  Train Acc: 92.97%,  Train Recall: 92.23%,  Train F1: 92.85%,  Val Loss:  0.33,  Val Acc: 90.18%,  Val Recall: 90.18%,  Val F1: 90.20%,  Time: 0:00:32 \n",
-      "Iter:   5100,  Train Loss:  0.25,  Train Acc: 92.97%,  Train Recall: 92.44%,  Train F1: 92.41%,  Val Loss:  0.32,  Val Acc: 90.24%,  Val Recall: 90.24%,  Val F1: 90.24%,  Time: 0:00:32 \n",
-      "Iter:   5200,  Train Loss:  0.39,  Train Acc: 89.06%,  Train Recall: 88.88%,  Train F1: 88.39%,  Val Loss:  0.32,  Val Acc: 90.35%,  Val Recall: 90.35%,  Val F1: 90.32%,  Time: 0:00:33 \n",
-      "Iter:   5300,  Train Loss:  0.15,  Train Acc: 94.53%,  Train Recall: 94.97%,  Train F1: 94.91%,  Val Loss:  0.32,  Val Acc: 90.26%,  Val Recall: 90.26%,  Val F1: 90.29%,  Time: 0:00:33 \n",
-      "Iter:   5400,  Train Loss:  0.43,  Train Acc: 89.06%,  Train Recall: 87.39%,  Train F1: 87.63%,  Val Loss:  0.33,  Val Acc: 90.24%,  Val Recall: 90.24%,  Val F1: 90.20%,  Time: 0:00:34 \n",
-      "Iter:   5500,  Train Loss:  0.26,  Train Acc: 92.19%,  Train Recall: 93.01%,  Train F1: 91.81%,  Val Loss:  0.32,  Val Acc: 90.31%,  Val Recall: 90.31%,  Val F1: 90.32%,  Time: 0:00:34 \n",
-      "Iter:   5600,  Train Loss:  0.12,  Train Acc: 97.66%,  Train Recall: 97.74%,  Train F1: 97.58%,  Val Loss:  0.32,  Val Acc: 90.33%,  Val Recall: 90.33%,  Val F1: 90.37%,  Time: 0:00:35 \n",
-      "Epoch [5/20]\n",
-      "Iter:   5700,  Train Loss:  0.26,  Train Acc: 91.41%,  Train Recall: 91.90%,  Train F1: 91.78%,  Val Loss:  0.32,  Val Acc: 90.22%,  Val Recall: 90.22%,  Val F1: 90.22%,  Time: 0:00:36 \n",
-      "Iter:   5800,  Train Loss:  0.11,  Train Acc: 96.88%,  Train Recall: 97.15%,  Train F1: 97.04%,  Val Loss:  0.33,  Val Acc: 90.15%,  Val Recall: 90.15%,  Val F1: 90.20%,  Time: 0:00:36 \n",
-      "No optimization for a long time, auto-stopping...\n",
-      "Test Loss:   0.3,  Test Acc: 91.09%,  Test Recall: 91.09%,  Test F1: 91.09%\n",
-      "Precision, Recall and F1-Score...\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "      finance     0.9207    0.8820    0.9009      1000\n",
-      "       realty     0.9222    0.9370    0.9296      1000\n",
-      "       stocks     0.8501    0.8620    0.8560      1000\n",
-      "    education     0.9455    0.9550    0.9502      1000\n",
-      "      science     0.8913    0.8530    0.8717      1000\n",
-      "      society     0.8849    0.9230    0.9036      1000\n",
-      "     politics     0.8815    0.9000    0.8906      1000\n",
-      "       sports     0.9566    0.9480    0.9523      1000\n",
-      "         game     0.9545    0.9020    0.9275      1000\n",
-      "entertainment     0.9062    0.9470    0.9262      1000\n",
-      "\n",
-      "     accuracy                         0.9109     10000\n",
-      "    macro avg     0.9114    0.9109    0.9109     10000\n",
-      " weighted avg     0.9114    0.9109    0.9109     10000\n",
-      "\n",
-      "Confusion Matrix...\n",
-      "[[882  17  61   8   8  10   8   4   0   2]\n",
-      " [ 12 937  14   1   3  15   6   1   1  10]\n",
-      " [ 45  23 862   4  21   3  35   3   2   2]\n",
-      " [  1   3   2 955   3  12   6   5   1  12]\n",
-      " [  2   5  40   4 853  20  25   2  28  21]\n",
-      " [  3  16   2  17   7 923  22   0   1   9]\n",
-      " [ 10   5  22  10  13  31 900   4   0   5]\n",
-      " [  1   2   3   2   3  10   9 948   3  19]\n",
-      " [  1   4   6   4  39   9   6  11 902  18]\n",
-      " [  1   4   2   5   7  10   4  13   7 947]]\n",
-      "Time usage: 0:00:00\n",
-      "Predictions saved to logs/log_3/test_pred.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "import torch\n",
@@ -7026,8 +6894,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
